fix: reduce overflow

--- a/client/src/pages/404/not-found.scss
+++ b/client/src/pages/404/not-found.scss
@@ -3,6 +3,7 @@
   text-align: center;
 
   img {
+    box-sizing: border-box;
     margin: 5px;
   }
 }
